[gd_scene load_steps=5 format=3 uid="uid://cblqgmr61wr3g"]

[ext_resource type="Texture2D" uid="uid://dx2wsbmmvu80a" path="res://Assets/New Game/5018320-200.png" id="1_o24es"]
[ext_resource type="Script" path="res://Scripts/Menus/NewGame.gd" id="1_sssyp"]
[ext_resource type="Texture2D" uid="uid://o4u5tht6eym0" path="res://Assets/New Game/Botón sin puchar BORRAR.png" id="3_vj4l7"]
[ext_resource type="Texture2D" uid="uid://4yjc32wbd72v" path="res://Assets/New Game/Botón puchado BORRAR.png" id="4_4gj4a"]

[node name="NewGame" type="Node2D"]
script = ExtResource("1_sssyp")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -1162.0
offset_top = -184.0
offset_right = 1643.0
offset_bottom = 904.0
color = Color(1, 0.0745098, 0, 1)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(573, 323)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 46.0
offset_top = 46.0
offset_right = 1128.0
offset_bottom = 585.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 44.0
offset_top = 78.0
offset_right = 684.0
offset_bottom = 278.0
scale = Vector2(1.5, 1.5)
theme_override_constants/separation = 20

[node name="Slot1" type="TextureButton" parent="Control/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_o24es")

[node name="Slot2" type="TextureButton" parent="Control/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_o24es")

[node name="Slot3" type="TextureButton" parent="Control/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_o24es")

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 64.0
offset_top = 28.0
offset_right = 1003.0
offset_bottom = 95.0
theme_override_font_sizes/font_size = 48
text = "Selecciona un espacio de guardado vacio"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 78.0
offset_top = 390.0
offset_right = 3750.0
offset_bottom = 646.0
scale = Vector2(0.25, 0.25)
theme_override_constants/separation = 300

[node name="DelButton1" type="TextureButton" parent="Control/HBoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("3_vj4l7")
texture_pressed = ExtResource("4_4gj4a")
texture_disabled = ExtResource("4_4gj4a")
stretch_mode = 0

[node name="DelButton2" type="TextureButton" parent="Control/HBoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("3_vj4l7")
texture_pressed = ExtResource("4_4gj4a")
texture_disabled = ExtResource("4_4gj4a")
stretch_mode = 0

[node name="DelButton3" type="TextureButton" parent="Control/HBoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("3_vj4l7")
texture_pressed = ExtResource("4_4gj4a")
texture_disabled = ExtResource("4_4gj4a")
stretch_mode = 0

[node name="Timer" type="Timer" parent="."]
wait_time = 3.5

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
title = "Seguro que quieres borrar?"
position = Vector2i(425, 228)
size = Vector2i(300, 80)
keep_title_visible = false
content_scale_mode = 1
ok_button_text = "Si"
cancel_button_text = "Cancelar"

[connection signal="button_down" from="Control/HBoxContainer/Slot1" to="." method="_on_slot_1_button_down"]
[connection signal="button_down" from="Control/HBoxContainer/Slot2" to="." method="_on_slot_2_button_down"]
[connection signal="button_down" from="Control/HBoxContainer/Slot3" to="." method="_on_slot_3_button_down"]
[connection signal="button_down" from="Control/HBoxContainer2/DelButton1" to="." method="_on_del_button_1_button_down"]
[connection signal="button_down" from="Control/HBoxContainer2/DelButton2" to="." method="_on_del_button_2_button_down"]
[connection signal="button_down" from="Control/HBoxContainer2/DelButton3" to="." method="_on_del_button_3_button_down"]
[connection signal="canceled" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_canceled"]
[connection signal="close_requested" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_close_requested"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
